flash deals added

--- a/locales/tr/translation.json
+++ b/locales/tr/translation.json
@@ -24,9 +24,11 @@
   "title": "Alışveriş Sepeti",
   "empty_title": "Sepetiniz Boş",
   "empty_subtitle": "Sepetinize ürün ekleyin",
+  "flash_sale": "Flaş İndirim",
   "start_shopping": "Alışverişe Başla",
   "clear_all": "Hepsini Kaldır",
   "clear_title": "Alışveriş Sepeti",
+  "cart.cancel":"İptal Et",
   "clear_confirm": "Tüm ürünleri sepetten kaldırmak istediğinize emin misiniz?",
   "clear": "Temizle",
   "total": "Toplam:",
